--- a/ProjectUbuild/Views/Home/FaQs.cshtml
+++ b/ProjectUbuild/Views/Home/FaQs.cshtml
@@ -231,7 +231,7 @@
                         <div class="card-header " role="tab" id="headingFourteen">
                             <h4 class="card-title">
                                 <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFourteen" aria-expanded="false" aria-controls="collapseFourteen">
-                                    13. If I am unable to pay my loan will my house be taken away from me?
+                                    14. If I am unable to pay my loan will my house be taken away from me?
                                 </a>
                             </h4>
                         </div>
@@ -241,21 +241,218 @@
                             </div>
                         </div>
                     </div>
-                    
-                <div class="card card-default m-b-0">
-                    <div class="card-header " role="tab" id="headingFifteen">
-                        <h4 class="card-title">
-                            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFifteen" aria-expanded="false" aria-controls="collapseFifteen">
-                                13. What are the requirements to apply for a loan?
-                            </a>
-                        </h4>
-                    </div>
-                    <div id="collapseFifteen" class="collapse" role="tabcard" aria-labelledby="headingFifteen">
-                        <div class="card-block">
-                            You need to check on the loan calculator to determine whether you qualify for the loan amount you need. You can then proceed to apply for the loan, which will require you to submit some basic information for our team to access your application viability. Once you begin the loan application process, you will receive a tracking number which you can use to track the progress of your loan application in the system.
+
+                    <div class="card card-default m-b-0">
+                        <div class="card-header " role="tab" id="headingFifteen">
+                            <h4 class="card-title">
+                                <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFifteen" aria-expanded="false" aria-controls="collapseFifteen">
+                                    15. What are the requirements to apply for a loan?
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapseFifteen" class="collapse" role="tabcard" aria-labelledby="headingFifteen">
+                            <div class="card-block">
+                                You need to check on the loan calculator to determine whether you qualify for the loan amount you need. You can then proceed to apply for the loan, which will require you to submit some basic information for our team to access your application viability. Once you begin the loan application process, you will receive a tracking number which you can use to track the progress of your loan application in the system.
+                            </div>
                         </div>
                     </div>
-                </div>
+
+                    <div class="card card-default m-b-0">
+                        <div class="card-header " role="tab" id="headingSixteen">
+                            <h4 class="card-title">
+                                <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSixteen" aria-expanded="false" aria-controls="collapseSixteen">
+                                    16. My loan application has been rejected, can I re-apply?
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapseSixteen" class="collapse" role="tabcard" aria-labelledby="headingSixteen">
+                            <div class="card-block">
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card card-default m-b-0">
+                        <div class="card-header " role="tab" id="headingSeventeen">
+                            <h4 class="card-title">
+                                <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSeventeen" aria-expanded="false" aria-controls="collapseSeventeen">
+                                    17. My loan application has been approved but I no longer want the loan, what do I do?
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapseSeventeen" class="collapse" role="tabcard" aria-labelledby="headingSeventeen">
+                            <div class="card-block">
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card card-default m-b-0">
+                        <div class="card-header " role="tab" id="headingEighteen">
+                            <h4 class="card-title">
+                                <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseEighteen" aria-expanded="false" aria-controls="collapseEighteen">
+                                    18. Can I make partial payments and request a loan to pay off?
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapseEighteen" class="collapse" role="tabcard" aria-labelledby="headingEighteen">
+                            <div class="card-block">
+                                Yes, but you will have to use our loan calculator to check whether you qualify to access the amount involved.
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="card card-default m-b-0">
+                        <div class="card-header " role="tab" id="headingNineteen">
+                            <h4 class="card-title">
+                                <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseNineteen" aria-expanded="false" aria-controls="collapseNineteen">
+                                    19. Can I schedule payments to be delivered on a future date or set up automatic monthly debits from my account?
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapseNineteen" class="collapse" role="tabcard" aria-labelledby="headingNineteen">
+                            <div class="card-block">
+                                Yes, but only if you have applied for a loan to purchase goods from a vendor.
+                            </div>
+                        </div>
+                    </div>
+                    <h5 style="padding: 5px;text-align: center;color: brown;">U-BUILD MARKET PLACE</h5>
+                    <div class="card card-default m-b-0">
+                        <div class="card-header " role="tab" id="headingTwenty">
+                            <h4 class="card-title">
+                                <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwenty" aria-expanded="false" aria-controls="collapseTwenty">
+                                    20. What is U-Build Market Place?
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapseTwenty" class="collapse" role="tabcard" aria-labelledby="headingTwenty">
+                            <div class="card-block">
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card card-default m-b-0">
+                        <div class="card-header " role="tab" id="headingTwentyOne">
+                            <h4 class="card-title">
+                                <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwentyOne" aria-expanded="false" aria-controls="collapseTwentyOne">
+                                    21. Are the prices quoted in the U-Build Market Place discounted?
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapseTwentyOne" class="collapse" role="tabcard" aria-labelledby="headingTwentyOne">
+                            <div class="card-block">
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card card-default m-b-0">
+                        <div class="card-header " role="tab" id="headingTwentyTwo">
+                            <h4 class="card-title">
+                                <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwentyTwo" aria-expanded="false" aria-controls="collapseTwentyTwo">
+                                    22 How do I make a purchase?
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapseTwentyTwo" class="collapse" role="tabcard" aria-labelledby="headingTwentyTwo">
+                            <div class="card-block">
+                                Explore You can make a purchase through VISA, MasterCard or Mobile Money from MTN, AirtelTigo or Vodafone
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card card-default m-b-0">
+                        <div class="card-header " role="tab" id="headingTwentyThree">
+                            <h4 class="card-title">
+                                <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwentyThree" aria-expanded="false" aria-controls="collapseTwentyThree">
+                                    23 Can I make multiple purchases?
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapseTwentyThree" class="collapse" role="tabcard" aria-labelledby="headingTwentyThree">
+                            <div class="card-block">
+                                Yes
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card card-default m-b-0">
+                        <div class="card-header " role="tab" id="headingTwentyFour">
+                            <h4 class="card-title">
+                                <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwentyFour" aria-expanded="false" aria-controls="collapseTwentyFour">
+                                    24 What payment options are available?
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapseTwentyFour" class="collapse" role="tabcard" aria-labelledby="headingTwentyFour">
+                            <div class="card-block">
+                                The various payments options available include VISA, MasterCard and Mobile Money.
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card card-default m-b-0">
+                        <div class="card-header " role="tab" id="headingTwentyFive">
+                            <h4 class="card-title">
+                                <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwentyFive" aria-expanded="false" aria-controls="collapseTwentyFive">
+                                    25 Do I need a GHL Bank account to make a purchase?
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapseTwentyFive" class="collapse" role="tabcard" aria-labelledby="headingTwentyFive">
+                            <div class="card-block">
+                                No.
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card card-default m-b-0">
+                        <div class="card-header " role="tab" id="headingTwentySix">
+                            <h4 class="card-title">
+                                <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwentySix" aria-expanded="false" aria-controls="collapseTwentySix">
+                                    26 How do I contact a vendor/supplier?
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapseTwentySix" class="collapse" role="tabcard" aria-labelledby="headingTwentySix">
+                            <div class="card-block">
+                                You can contact a vendor or a supplier through a messaging tab provided on the U-Build Market Place interface.
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card card-default m-b-0">
+                        <div class="card-header " role="tab" id="headingTwentySeven">
+                            <h4 class="card-title">
+                                <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwentySeven" aria-expanded="false" aria-controls="collapseTwentySeven">
+                                    27 How do I authenticate a vendor/supplier?
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapseTwentySeven" class="collapse" role="tabcard" aria-labelledby="headingTwentySeven">
+                            <div class="card-block">
+                                All vendors and suppliers will be vetted before they are accepted on the uBuild platform. And this process is reviewed every six months to ensure that at any point in time all vendor and supplier information on the platform are up to date.
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="card card-default m-b-0">
+                        <div class="card-header " role="tab" id="headingTwentyEight">
+                            <h4 class="card-title">
+                                <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwentyEight" aria-expanded="false" aria-controls="collapseTwentyEight">
+                                    28 Who do I contact if I have concerns not addressed by this FAQ?
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapseTwentyEight" class="collapse" role="tabcard" aria-labelledby="headingTwentyEight">
+                            <div class="card-block">
+                                Please call our 24hr contact experience center or call our toll free number on the U-Build portal.
+                            </div>
+                        </div>
+                    </div>
+
 
                 </div>
                 <!--end of text tabs-->
