--- a/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
+++ b/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
@@ -130,6 +130,7 @@
                                     <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                                         <h5 style="color: brown">Base house cost : <span data-ng-bind="vm.model.houseCostCurrency"></span> <span>@Model.BareDesignCost.ToString("N2")</span></h5>
                                     </a>
+                                    <a style="font-size: 10px" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">Click to view bill of quantities</a>
                                 </h4>
                             </div>
                             <div id="collapseThree" class="collapse" role="tabcard" aria-labelledby="headingThree">
