--- a/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
+++ b/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
@@ -86,19 +86,14 @@
                             <div class="col-md-12">
                                 <div class="row">
                                     <div class="col-md-3">
-                                        <div class="form-group form-group-default form-group-default-select2 " style="height: 60px">
-                                            <label class="">Customizable Items List</label>
-                                            <select class="full-width select2-hidden-accessible" data-placeholder="Select Item" data-init-plugin="select2" tabindex="-1" aria-hidden="true" data-ng-options="item as item.ItemName for item in vm.customizables" data-ng-model="vm.model.selectedCustomizable" data-ng-change="vm.getFixturesForCustomizable(vm.model.selectedCustomizable)">
+                                        @* <div class="form-group form-group-default " style="height: 60px"> *@
+                                        @*     <label class="">Customizable Items List</label> *@
+                                            <select class="custom-selectpicker" data-live-search="true"
+                                                    aria-hidden="true" data-ng-options="item as item.ItemName for item in vm.customizables" data-ng-model="vm.model.selectedCustomizable" data-ng-change="vm.getFixturesForCustomizable(vm.model.selectedCustomizable)">
                                                 <option value="">Select Customizable..</option>
                                             </select>
-                                            <span class="select2 select2-container select2-container--default select2-container--below select2-container--focus" dir="ltr" style="width: 334px;">
-                                                <span class="selection">
-                                                    <span class="select2-selection select2-selection--single" role="combobox"
-                                                          aria-haspopup="true" aria-expanded="false" tabindex="0" aria-labelledby="select2-u1vf-container">
-                                                    </span>
-                                                </span><span class="dropdown-wrapper" aria-hidden="true"></span>
-                                            </span>
-                                        </div>
+                                           
+                                        @* </div> *@
                                     </div>
                                     <div class="col-md-9" style="max-height: 310px; overflow: auto;" data-ng-show="vm.customizableFixtureFittings.length>0">
                                         <select class="image-picker show-html" data-ng-model="vm.model.selectedFixture">
