--- a/ProjectUbuild/Views/Profile/Index.cshtml
+++ b/ProjectUbuild/Views/Profile/Index.cshtml
@@ -711,7 +711,7 @@ else
             <!--end of row-->
         </div>
         <div class="container" data-ng-hide="vm.accountNotVerified">
-            <h4>Thank you. You acount has been verified</h4>
+            <h4>Thank you. Your acount has been verified.</h4>
         </div>
         <!--end of container-->
     </section>
