--- a/ProjectUbuild/Views/Account/ResetPassword.cshtml
+++ b/ProjectUbuild/Views/Account/ResetPassword.cshtml
@@ -24,9 +24,9 @@
                         @Html.HiddenFor(m=>m.Code)
                         @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "Email" })
                         @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-                        @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Password" })
+                        @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "New Password" })
                         @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-                        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", placeholder = "Confirm Password" })
                         @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
                         <input type="submit" value="Submit" /> 
                     }
