--- a/ProjectUbuild/Views/Account/Register.cshtml
+++ b/ProjectUbuild/Views/Account/Register.cshtml
@@ -31,13 +31,14 @@
                         @Html.PasswordFor(m => m.Password,
                             new { @class = "form-control", placeholder = "Password", autocomplete = "off", data_toggle = "tooltip", data_html="true", data_placement = "bottom", title = "<p>Password must :</p>* be at least 6 characters,* have upper and lower case letters and *special characters." })
                         @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", placeholder = "Confirm Password", autocomplete = "off" })
+                        <p class="mb0">
+                            <input type="checkbox" name="acceptTerms" value="acceptTerms" /> By signing up, you agree to our
+                            <a href="/TermsOfUse">Terms Of Use</a>
+                        </p>
 
                         <input type="submit" value="Register" />
                     }
-                    <p class="mb0">
-                        By signing up, you agree to our
-                        <a href="#">Terms Of Use</a>
-                    </p>
+                   
                 </div>
             </div>
         </div>
