--- a/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
+++ b/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
@@ -57,8 +57,8 @@
                                                 <input type="checkbox" data-ng-model="vm.view3D">
                                                 <span class="slider round"></span>
                                             </label>
-                                            <label class="font-weight-bold" data-ng-hide="vm.view3D">2D View</label>
-                                            <label class="font-weight-bold" data-ng-show="vm.view3D">3D View</label> 
+                                            <label class="font-weight-bold" data-ng-hide="vm.view3D">Floor Plans</label>
+                                            <label class="font-weight-bold" data-ng-show="vm.view3D">3D Drawings</label> 
                                         </div>
                                        
                                     </div>
@@ -150,6 +150,36 @@
                             </div>
                         </div>
                         <div class="card card-default m-b-0">
+                            <div class="card-header " role="tab" id="headingTwo">
+                                <h4 class="card-title">
+                                    <a style="color: brown" class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                        <div class="label font-weight-bold text-white">Check eligibility for owning this house</div>
+                                    </a>
+                                </h4>
+                            </div>
+                            <div id="collapseTwo" class="collapse" role="tabcard" aria-labelledby="headingTwo">
+                                <div class="card-block">
+                                    <form>
+
+                                        <div class="form-group form-group-default input-group">
+                                            <label for="houseEligibility" class="ng-binding">Please Select Loan Tenure in Years.</label>
+                                            <select data-ng-model="vm.model.tenure" id="loanTenure" placeholder="Loan Tenure" class="form-control ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched" style="">
+                                                <option value="">Select Loan Tenure</option>
+                                                <option data-ng-repeat="t in vm.getTenureRange()" value="{{t}}">{{t}}</option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group form-group-default input-group">
+                                            <label for="houseEligibility" class="ng-binding">Please enter your monthly income.</label>
+                                            <input autocomplete="off" data-ng-model="vm.model.income" id="houseEligibility" placeholder="Monthly Income here" type="Text" class="form-control ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched" style="">
+                                            <span ng-show="vm.model.tenure && vm.model.income" class="input-group-addon primary p-r-15 p-l-15" style="cursor: pointer; background: #ac5e81" data-ng-click="vm.checkEligibility()">
+                                                Submit
+                                            </span>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card card-default m-b-0">
                             <div class="card-header " role="tab" id="headingOne">
                                 <h4 class="card-title">
                                     <a style="color: brown" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -189,36 +219,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card card-default m-b-0">
-                            <div class="card-header " role="tab" id="headingTwo">
-                                <h4 class="card-title">
-                                    <a style="color: brown" class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                        <div class="label font-weight-bold text-white">Check eligibility for owning this house</div>
-                                    </a>
-                                </h4>
-                            </div>
-                            <div id="collapseTwo" class="collapse" role="tabcard" aria-labelledby="headingTwo">
-                                <div class="card-block">
-                                    <form>
-                                       
-                                        <div class="form-group form-group-default input-group">
-                                            <label for="houseEligibility" class="ng-binding">Please Select Loan Tenure in Years.</label>
-                                            <select data-ng-model="vm.model.tenure" id="loanTenure" placeholder="Loan Tenure" class="form-control ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched" style="">
-                                                <option value="">Select Loan Tenure</option>
-                                                <option data-ng-repeat="t in vm.getTenureRange()" value="{{t}}">{{t}}</option>
-                                            </select>
-                                        </div>
-                                        <div class="form-group form-group-default input-group">
-                                            <label for="houseEligibility" class="ng-binding">Please enter your monthly income.</label>
-                                            <input autocomplete="off" data-ng-model="vm.model.income" id="houseEligibility" placeholder="Monthly Income here" type="Text" class="form-control ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched" style="">
-                                            <span ng-show="vm.model.tenure && vm.model.income" class="input-group-addon primary p-r-15 p-l-15" style="cursor: pointer; background: #ac5e81" data-ng-click="vm.checkEligibility()">
-                                                Submit
-                                            </span>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
+                       
                         
                     </div>
                     
